--- a/Migrant_Visualization.ipynb
+++ b/Migrant_Visualization.ipynb
@@ -17,7 +17,9 @@
   {
    "cell_type": "code",
    "execution_count": 130,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "schools = pd.read_csv('data/third_math_AB.csv')\n",
@@ -30,7 +32,9 @@
   {
    "cell_type": "code",
    "execution_count": 131,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -50,7 +54,9 @@
   {
    "cell_type": "code",
    "execution_count": 132,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -106,7 +112,9 @@
   {
    "cell_type": "code",
    "execution_count": 134,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -123,7 +131,9 @@
   {
    "cell_type": "code",
    "execution_count": 135,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -145,7 +155,9 @@
   {
    "cell_type": "code",
    "execution_count": 136,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -166,7 +178,9 @@
   {
    "cell_type": "code",
    "execution_count": 137,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -195,7 +209,9 @@
   {
    "cell_type": "code",
    "execution_count": 138,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -234,7 +250,9 @@
   {
    "cell_type": "code",
    "execution_count": 143,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -269,7 +287,9 @@
   {
    "cell_type": "code",
    "execution_count": 144,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -304,7 +324,9 @@
   {
    "cell_type": "code",
    "execution_count": 145,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -339,21 +361,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
