--- a/Initial_Modeling.ipynb
+++ b/Initial_Modeling.ipynb
@@ -417,7 +417,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "** In some perspective, the model's predicted v"
+    "** In some perspective, the model's predicted value's Root Mean Squared Error is about half of the data's standard deviation"
    ]
   },
   {
