Add Statistical Inference

--- a/Data_Wrangling.ipynb
+++ b/Data_Wrangling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 69,
    "metadata": {
     "collapsed": true
    },
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 70,
    "metadata": {
     "collapsed": false
    },
@@ -115,7 +115,7 @@
        "Name: 1, dtype: object"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 71,
    "metadata": {
     "collapsed": false
    },
@@ -175,7 +175,7 @@
        "2       100248          2391.600"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 72,
    "metadata": {
     "collapsed": false
    },
@@ -233,7 +233,7 @@
        "2       100040          2537.900"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 73,
    "metadata": {
     "collapsed": false
    },
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 74,
    "metadata": {
     "collapsed": false
    },
@@ -339,7 +339,7 @@
        "1                 Kern High School District  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 75,
    "metadata": {
     "collapsed": false
    },
@@ -407,7 +407,7 @@
        "1  Buckeye Union Elementary School District  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -433,9 +433,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 76,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -495,7 +496,7 @@
        "4           61168          644.25              17105.60"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -508,20 +509,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 77,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "Per_Pupil_Spending.columns=['District Code','Total_Students','Per_Student_Spending']\n",
-    "#Migrant_School_List = Migrant_School_List.merge(Per_Pupil_Spending[['District Code','Total_Students','Per_Student_Spending']])\n",
+    "Migrant_School_List = Migrant_School_List.merge(Per_Pupil_Spending[['District Code','Total_Students','Per_Student_Spending']])\n",
     "#Migrant_School_List.head(2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 78,
    "metadata": {
     "collapsed": false
    },
@@ -581,7 +582,7 @@
        "1  Ezequiel Tafoya Alvarado Academy        19011.95              10950.81  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -606,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 79,
    "metadata": {
     "collapsed": false
    },
@@ -642,7 +643,7 @@
        "0     1001  56663.0  66688.00  16445.0"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -655,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 80,
    "metadata": {
     "collapsed": false
    },
@@ -711,7 +712,7 @@
        "0  52034.00  49068.0  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -737,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 81,
    "metadata": {
     "collapsed": false
    },
@@ -806,7 +807,7 @@
        "0                0.0   1/16/2018  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -819,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 82,
    "metadata": {
     "collapsed": false
    },
@@ -838,6 +839,8 @@
        "      <th>District Code</th>\n",
        "      <th>Zip Code</th>\n",
        "      <th>District Name</th>\n",
+       "      <th>Total_Students</th>\n",
+       "      <th>Per_Student_Spending</th>\n",
        "      <th>Median</th>\n",
        "      <th>Mean</th>\n",
        "      <th>Pop</th>\n",
@@ -853,6 +856,8 @@
        "      <td>63560</td>\n",
        "      <td>93307</td>\n",
        "      <td>Lamont Elementary</td>\n",
+       "      <td>2958.4</td>\n",
+       "      <td>10666.62</td>\n",
        "      <td>35780.0</td>\n",
        "      <td>43139.00</td>\n",
        "      <td>82658.0</td>\n",
@@ -866,11 +871,14 @@
        "   Mean Scale Score County Name  School Code  District Code Zip Code  \\\n",
        "0           2446.35        Kern      6009690          63560    93307   \n",
        "\n",
-       "       District Name   Median      Mean      Pop  YearsTeaching  \n",
-       "0  Lamont Elementary  35780.0  43139.00  82658.0      11.230769  "
+       "       District Name  Total_Students  Per_Student_Spending   Median      Mean  \\\n",
+       "0  Lamont Elementary          2958.4              10666.62  35780.0  43139.00   \n",
+       "\n",
+       "       Pop  YearsTeaching  \n",
+       "0  82658.0      11.230769  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -896,7 +904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 83,
    "metadata": {
     "collapsed": false
    },
@@ -934,7 +942,7 @@
        "0       112607       413       308              0.75          0.745763"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -949,7 +957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 84,
    "metadata": {
     "collapsed": false
    },
@@ -1041,7 +1049,7 @@
        "1          0.207444  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1066,7 +1074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 85,
    "metadata": {
     "collapsed": true
    },
@@ -1078,7 +1086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 86,
    "metadata": {
     "collapsed": false
    },
@@ -1149,7 +1157,7 @@
        "0           0.07733        0.0  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1169,7 +1177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 87,
    "metadata": {
     "collapsed": false
    },
@@ -1188,6 +1196,8 @@
        "      <th>District Code</th>\n",
        "      <th>Zip Code</th>\n",
        "      <th>District Name</th>\n",
+       "      <th>Total_Students</th>\n",
+       "      <th>Per_Student_Spending</th>\n",
        "      <th>Median</th>\n",
        "      <th>Mean</th>\n",
        "      <th>Pop</th>\n",
@@ -1208,6 +1218,8 @@
        "      <td>63560</td>\n",
        "      <td>93307</td>\n",
        "      <td>Lamont Elementary</td>\n",
+       "      <td>2958.4</td>\n",
+       "      <td>10666.62</td>\n",
        "      <td>35780.0</td>\n",
        "      <td>43139.00</td>\n",
        "      <td>82658.0</td>\n",
@@ -1226,14 +1238,17 @@
        "   Mean Scale Score County Name  School Code  District Code Zip Code  \\\n",
        "0           2446.35        Kern      6009690          63560    93307   \n",
        "\n",
-       "       District Name   Median      Mean      Pop  YearsTeaching  Enrolled  \\\n",
-       "0  Lamont Elementary  35780.0  43139.00  82658.0      11.230769       625   \n",
+       "       District Name  Total_Students  Per_Student_Spending   Median      Mean  \\\n",
+       "0  Lamont Elementary          2958.4              10666.62  35780.0  43139.00   \n",
        "\n",
-       "   Utilized  Percent_Eligible  Percent_Utilized  Sanctuary  \n",
-       "0       601              0.96            0.9616        0.0  "
+       "       Pop  YearsTeaching  Enrolled  Utilized  Percent_Eligible  \\\n",
+       "0  82658.0      11.230769       625       601              0.96   \n",
+       "\n",
+       "   Percent_Utilized  Sanctuary  \n",
+       "0            0.9616        0.0  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1253,7 +1268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 88,
    "metadata": {
     "collapsed": false
    },
@@ -1262,7 +1277,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "98\n"
+      "93\n"
      ]
     }
    ],
@@ -1294,7 +1309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 89,
    "metadata": {
     "collapsed": true
    },
@@ -1305,7 +1320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 90,
    "metadata": {
     "collapsed": true
    },
