Added Basis for California Map

--- a/Initial_Modeling.ipynb
+++ b/Initial_Modeling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -14,12 +14,20 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import sklearn\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "from bokeh.io import show\n",
+    "from bokeh.models import (\n",
+    "    ColumnDataSource,\n",
+    "    HoverTool,\n",
+    "    LogColorMapper\n",
+    ")\n",
+    "from bokeh.palettes import Viridis6 as palette\n",
+    "from bokeh.plotting import figure"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -92,7 +100,7 @@
        "0              0.08           0.07733        0.0  "
       ]
      },
-     "execution_count": 169,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -163,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -175,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -187,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -199,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -211,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -223,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -234,7 +242,7 @@
        "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=1, normalize=False)"
       ]
      },
-     "execution_count": 176,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -267,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -286,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -295,7 +303,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('the Root Mean Square Error for All is: ', 37.372184553705161, ' and the Root Mean Square Error for Migrant is: ', 35.554883586705024)\n"
+      "('the Root Mean Square Error for All is: ', 37.372184553705161, ' and the Root Mean Square Error for Migrant is: ', 40.531743631411246)\n"
      ]
     }
    ],
@@ -319,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -356,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -365,7 +373,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('the original RMSE for migrants is: ', 35.554883586705024, ' the Score Informed RMSE is: ', 25.786251110222032, 'compared with ', 51.801480372418361, ' for the naive solution')\n"
+      "('the original RMSE for migrants is: ', 40.531743631411246, ' the Score Informed RMSE is: ', 23.081230252540315, 'compared with ', 47.254022103058908, ' for the naive solution')\n"
      ]
     }
    ],
@@ -385,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -394,14 +402,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "49.7369666082\n"
+      "49.379431222\n"
      ]
     },
     {
      "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAXoAAAEACAYAAAC9Gb03AAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAES1JREFUeJzt3X+sZGV9x/H3BxYVBRfEwK2s7IoNtbVSigWtGp1gK8RG\nMG3aVNua2kQTU4EooYJturdN04CNVWtrEytu1Lgxao2Wxh+U6DShij9Y1l11VawIiu61VpQYgxX3\n2z/u2e3tdS937syZnZ1n369kkjNnzjnP97nnzuee+8ycc1JVSJLaddysC5AkTZdBL0mNM+glqXEG\nvSQ1zqCXpMYZ9JLUuHWDPskNSZaS7Fkx75eSfCLJ7Uk+leRXplumJGlcoxzR7wAuXjXvNcD2qvpl\nYDvwN30XJknqx7pBX1W3APeumn0A2NxNnwLc03NdkqSebBpzvVcAH0nyWiDA0/orSZLUp3E/jH0Z\ncGVVncVy6L+1v5IkSX3KKNe6SbIVuLGqzu2ef6+qTlnx+veravMa63oxHUkaQ1Wlj+2MekSf7nHQ\nPUmeBZDk2cCXH2zlqmr2sX379pnXcCz0r/tN6vmxfdXztn5Xj5Z9Z//Ge/Rp3TH6JDuBAXBakru7\nd8dLgL9LcjxwP/DSXquSJPVm3aCvqheu8ZLfnZekOeCZsRMaDAazLmGq2u7fYNYFTFXb+679/vVp\npA9jJ2ogqWm3ofYl4eA4+hRb6X1sVBpXEuoIfxgrSZpTBr0kNc6gl6TGGfSS1DiDXpIaZ9BLUuMM\neklqnEEvSY0z6CWpcQa9JDXOoJekxhn0ktQ4g16SGmfQS1Lj1g36JDckWUqyZ9X8y5PsS7I3yXXT\nK1GSNIl17zAF7ADeCLz94IwkA+B5wJOq6oEkj55OeZKkSa17RF9VtwD3rpr9MuC6qnqgW+Y7U6hN\nktSDccfozwGemeTWJB9L4v1jJekoNcrQzVrrnVpVT01yAfBu4Oy1Fl5cXDw0PRgMvNejjlkLC9tY\nWrprqm2cccZW9u//2lTbUP+GwyHD4XAq2x7pnrFJtgI3VtW53fMPAtdX1b93z78CPKWq/vsw63rP\nWE2slXvGttIPTd8s7hmb7nHQ+4GLumLOAU44XMhLkmZv3aGbJDuBAXBakruB7cBbgR1J9gI/Al40\nzSIlSeMbaehmogYculEPWhnyaKUfmr5ZDN1IkuaUQS9JjTPoJalxBr0kNc6gl6TGGfSS1DiDXpIa\nZ9BLUuMMek1sYWEbSab6kDQ+z4zVxI7U2Z4tnFHqmbEalWfGSpJGZtBLUuMMeklqnEEvSY0z6CWp\ncQa9JDVu3aBPckOSpSR7DvPaVUkOJHnUdMqTJE1qlCP6HcDFq2cm2QL8OjDdW9pLkiaybtBX1S3A\nvYd56XXA1b1XJEnq1Vhj9EkuBb5eVXt7rkeS1LNNG10hyYnAq1ketjk0+8HWWVxcPDQ9GAwYDAYb\nbVaSmjYcDhkOh1PZ9kjXukmyFbixqs5N8ovAzcAPWQ74LcA9wIVV9e3DrOu1bhrntW420ILXutGI\n+rzWzahH9OkeVNXngIUVxdwJnF9VhxvHlyTN2Chfr9wJfBw4J8ndSV68apFinaEbSdLseJliTcyh\nmw204NCNRuRliiVJIzPoJalxBr0kNc6gl6TGGfSS1DiDXpIaZ9BLUuMMeklqnEEvSY0z6CWpcQa9\nJDXOoJekxhn0ktQ4g16SGmfQS1LjDHpJatwod5i6IclSkj0r5r0myb4ku5P8c5JHTrdMSdK4Rjmi\n3wFcvGreTcATq+o84A7g2r4LkyT1Y92gr6pbgHtXzbu5qg50T28FtkyhNklSD/oYo/8j4EM9bEeS\nNAWbJlk5yZ8CP66qnQ+23OLi4qHpwWDAYDCYpFltwMLCNpaW7pp1GZLWMRwOGQ6HU9l2RrlbfJKt\nwI1Vde6KeX8IvAS4qKp+9CDrlnekn50kwLR//u20Me3f1SO1P3zPzb8kVFX62NaoR/TpHgcLuAS4\nGnjmg4W8JGn2Rvl65U7g48A5Se5O8mLgjcBJwL8l2ZXkTVOuU5I0ppGGbiZqwKGbmXLoZmNtOHSj\no0WfQzeeGStJjTPoJalxBr0kNc6gl6TGGfSS1DiDXpIaZ9BLUuMMeklqnEEvSY0z6CWpcQa9JDXO\noJekxhn0ktQ4g16SGmfQS1LjRrnxyA1JlpLsWTHv1CQ3JflSko8k2TzdMiVJ4xrliH4HcPGqedcA\nN1fVzwEfBa7tuzBJUj/WDfqqugW4d9Xsy4C3ddNvA57fc12SpJ6MO0Z/elUtAVTVfuD0/kqSJPWp\nrw9jvUGlJB2lNo253lKSM6pqKckC8O0HW3hxcfHQ9GAwYDAYjNmsNE0P7W7eLR15w+GQ4XA4lW1n\nlLvFJ9kG3FhVT+qeXw98t6quT/Iq4NSqumaNdcs70s/OcnBN++dvG0dbG77n5l8SqqqXI491gz7J\nTmAAnAYsAduB9wPvAR4L3AX8TlV9b431DfoZMuiPzTZ8z82/Ixr0Ezdg0M+UQX9stuF7bv71GfSe\nGStJjTPoJalxBr0kNc6gl6TGGfSS1DiDXpIaZ9BLUuMMeklqnEEvNWf5mj3TfiwsbJt1RzUiz4xt\nnGfG2sY02/G9PT2eGStJGplBL0mNM+glqXEGvSQ1zqCXpMYZ9JLUuImCPskrknwuyZ4k70zykL4K\nkyT1Y+ygT/IY4HLg/Ko6l+Ubjf9uX4VJkvqxacL1jwcekeQA8HDgm5OXJEnq09hH9FX1TeC1wN3A\nPcD3qurmvgqTJPVjkqGbU4DLgK3AY4CTkrywr8IkSf2YZOjm14CvVtV3AZK8D3gasHP1gouLi4em\nB4MBg8FggmYlqT3D4ZDhcDiVbY99UbMkFwI3ABcAPwJ2AJ+uqn9YtZwXNZshL2pmG9Nsx/f29BwV\nFzWrqk8B7wVuBz7L8m/Xm/soSpLUHy9T3DiP6G1jmu343p6eo+KIXpI0Hwx6SWqcQS9JjTPoJalx\nBr0kNc6gl6TGGfSS1DiDXpIaZ9BLGtNDSTLVx8LCtll3sgmeGds4z4y1jflu59g9+9YzYyVJIzPo\nJalxBr0kNc6gl6TGGfSS1DiDXpIaN1HQJ9mc5D1J9iX5fJKn9FWYJKkfk9wcHOANwAer6reTbAIe\n3kNNkqQeTXJz8EcCt1fV49dZzhOmZsgTpmxjvtvxhKk+tjXJ0M3jgO8k2ZFkV5I3Jzmxj6IkSf2Z\nZOhmE3A+8MdV9ZkkrweuAbavXnBxcfHQ9GAwYDAYTNBsOxYWtrG0dNesy5B0FBgOhwyHw6lse5Kh\nmzOAT1TV2d3zZwCvqqrnrVrOoZs1OKxiG/PbxpFqx6GbPrY19tBNVS0BX09yTjfr2cAX+ihKktSf\nSb91cwXwziQnAF8FXjx5SZKkPnmZ4hly6MY25reNI9WOQzd9bMszYyWpcQa9JDXOoJekxhn0ktQ4\ng16SGmfQS1LjDHpJapxBL0mNM+glqXEGvSQ1zqCXpMYZ9JLUOINekhpn0EtS4wx6SWqcQS9JjZs4\n6JMcl2RXkn/poyBJUr/6OKK/Eu8VK0lHrYmCPskW4LnAW/opR5LUt0mP6F8HXM2RuUGlJGkMm8Zd\nMclvAEtVtTvJgOU7BR/W4uLioenBYMBgMBi3WUlq0nA4ZDgcTmXbGfcO60n+Gvh94AHgROBk4H1V\n9aJVy9Wxehf39SRh+v8M2YZtzHM74VjNjyRU1ZoH0BvaVh8/xCTPAq6qqksP85pBvwaD3jbmt40j\n1Y5B38e2/B69JDWulyP6B23AI/o1eURvG/PbxpFqxyP6PrblEb0kNc6gl6TGGfSS1DiDXpIaZ9BL\nUuMMeklqnEEvSY0b+1o3LbvoosvYtevTU23jxBNPnOr2Jekgg/4wbrvtk9x334eB06fWxoEDz5va\ntiVpJYN+TQvdYzqOO+4hU9u2JK3kGL0kNc6gl6TGGfSS1DiDXpIaZ9BLUuMMeklq3NhBn2RLko8m\n+XySvUmu6LMwSVI/Jvke/QPAK6tqd5KTgNuS3FRVX+ypNklSD8Y+oq+q/VW1u5v+AbAPOLOvwiRJ\n/ehljD7JNuA84JN9bE+S1J+JL4HQDdu8F7iyO7L/KYuLi4emB4MBg8Fg0mYlHRMeStLL/bHXdMYZ\nW9m//2tTbWMUw+GQ4XA4lW1nkjusJ9kE/Cvwoap6wxrL1LzdxX3z5gXuu28307zWzebNv8r3v38r\nMO2fTWzDNua4nSPTxtGYUUmoql7+yk06dPNW4AtrhbwkafYm+Xrl04HfAy5KcnuSXUku6a80SVIf\nxh6jr6r/AI7vsRZJ0hR4ZqwkNc6gl6TGGfSS1DiDXpIaZ9BLUuMMeklqnEEvSY0z6CWpcQa9JDXO\noJekxhn0ktQ4g16SGmfQS1LjDHpJapxBL0mNmyjok1yS5ItJvpzkVX0VJUnqzyR3mDoO+HvgYuCJ\nwAuSPKGvwubHcNYFTNlw1gVM0XDWBUzZcNYFTNlw1gXMjUmO6C8E7qiqu6rqx8C7gMv6KWueDGdd\nwJQNZ13AFA1nXcCUDWddwJQNZ13A3Jgk6M8Evr7i+Te6eZKko8jY94xt2QknnMDJJ/8BycPWXfb+\n+7/Ewx5224bbuP/+L45TmiRtWKpqvBWTpwKLVXVJ9/waoKrq+lXLjdeAJB3jqip9bGeSoD8e+BLw\nbOBbwKeAF1TVvj4KkyT1Y+yhm6r6SZKXAzexPNZ/gyEvSUefsY/oJUnzYcPfukmyJclHk3w+yd4k\nl3fz/zLJZ5PcnuTDSRZWrHNtkjuS7EvynBXzz0+ypzvh6vX9dGkyG+1fkq1JfphkV/d404ptzUP/\nrlj1+lVJDiR51Ip5c7H/Ntq3Bvbdwd/N7Um+saIfl6xYZy72HWy8fw3svytWvHZ5t4/2Jrluxfx+\n9l9VbegBLADnddMnsTxO/wTgpBXLXA78Yzf9C8DtLA8TbQO+wv/9J/FJ4IJu+oPAxRutp+/HGP3b\nCuxZY1tz07/u+Rbgw8CdwKO6eT8/L/tvjL41se+A7cArD7P83Oy7MfvXyv4bsDwEvql77dF9778N\nH9FX1f6q2t1N/wDYB5zZTR/0COBAN30p8K6qeqCqvgbcAVzYHRGfXFWf7pZ7O/D8jdbTtzH6B/BT\nn4zPW/+6l18HXL1qlcuYk/03Rt+gnX13uG9nzM2+g7H6d9j5c9i/lwHXVdUD3Wvf6Vbpbf9Neq2b\nbcB5LP91IclfJbkbeCHw591iq0+suqebdybLJ1kddNSdcDVi/wC2df86fizJM7p5c9W/JJcCX6+q\nvasWm8v9N2LfoIF91816eZLdSd6SZHM3by73Hazbv1NWLNrC/jsHeGaSW7t+PLlbrLf9N8m1bk4C\n3gtcefBot6r+rKrOAt7J8vDG3NpA/74FnFVV5wNXATu7dY9qK/sH/AR4Ncv/Is+9Efp28Cjwm8z5\nvut+N98EnF1V5wH7gdfOsr5JbaB/c//e6/q3CTi1qp4K/Anwnr7bHCvok2xiudB3VNUHDrPITuA3\nu+l7gMeueG1LN2+t+TM3Yv9+C6Cq/qeq7u2mdwH/yfJf6Hnq3+NZHgP8bJI7Wa51V5LTWa75rBWr\nH9X7b8S+3Zbk9Kr6cQP7jqr6r+oGa4F/Yvk6VNDIe+8w/bugm9/Cew+Wj9rfB9ANx/wkyWn0+d4b\n80OFtwN/u2rez66Yvhx4dzd98MPYhwCP4/9/oHAry7+UYfkDhUsm/cCjj8cG+/do4Lhu+uxup50y\nb/1b9fqdLB9hzN3+22Dfmth3wMKK6VcAO+dx343Rv1b230uBv+imzwHu6nv/jVPo01n+d3h3V8Qu\n4BKW/0rt7eZ/APiZFetc2xW5D3jOivlP7ta5A3jDrHfCOP1j+T+Xz3XLfQZ47jz2b9UyX6X7Zso8\n7b+N9q2VfdeFx55u/vuBM+Zt343Tv4b23wnAO7p6PwM8q+/95wlTktQ4byUoSY0z6CWpcQa9JDXO\noJekxhn0ktQ4g16SGmfQS1LjDHpJatz/AgpBY3tOiQfJAAAAAElFTkSuQmCC\n",
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAXoAAAEACAYAAAC9Gb03AAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAERRJREFUeJzt3X+sZGV9x/H3BxYRBQExcCsru2JDba2UYkGrRifaCrER\nTJs21VpTazQxFYglVLBN97ZpGrCxam1tYsWNGjdGqdHS+KtEpwlV/LWsu+iqWBEQ3bVWlBiDFfn2\njzm7vb3u7p07c2Zn59n3K5nkzJlzzvN97rnzuec+M+ecVBWSpHYdM+8CJEmzZdBLUuMMeklqnEEv\nSY0z6CWpcQa9JDVuzaBPcn2SvUl2rpj3S0k+meTWJJ9O8iuzLVOSNKlxjui3AhetmvdaYEtV/TKw\nBfibvguTJPVjzaCvqpuBe1fNfhA4uZs+Bbin57okST3ZMOF6rwI+kuR1QICn9leSJKlPk34Y+wrg\niqo6i1Hov62/kiRJfco417pJsgm4sarO7Z5/r6pOWfH696vq5IOs68V0JGkCVZU+tjPuEX26xz73\nJHkmQJJnA1851MpV1exjy5Ytc6/haOhf95vU82PLqudt/a4eKfvO/k326NOaY/RJtgED4LQkd3Xv\njpcBf5fkWOB+4OW9ViVJ6s2aQV9VLzzIS353XpIWgGfGTmkwGMy7hJlqu3+DeRcwU23vu/b716ex\nPoydqoGkZt2G2peEfePoM2yl97FRaVJJqMP8YawkaUEZ9JLUOINekhpn0EtS4wx6SWqcQS9JjTPo\nJalxBr0kNc6gl6TGGfSS1DiDXpIaZ9BLUuMMeklqnEEvSY1bM+iTXJ9kb5Kdq+ZflmR3kl1Jrp1d\niZKkaax5hylgK/Am4B37ZiQZAM8DnlhVDyR51GzKkyRNa80j+qq6Gbh31exXANdW1QPdMt+ZQW2S\npB5MOkZ/DvCMJLck+XgS7x8rSUeocYZuDrbeqVX1lCQXAO8Bzj7YwsvLy/unB4OB93qUpFWGwyHD\n4XAm2x7rnrFJNgE3VtW53fMPAtdV1b93z78KPLmq/vsA63rPWE3Ne8bqaDOPe8ame+zzfuBZXTHn\nAMcdKOQlSfO35tBNkm3AADgtyV3AFuBtwNYku4AfAS+eZZGSpMmNNXQzVQMO3agHDt3oaDOPoRtJ\n0oIy6CWpcQa9JDXOoJekxhn0ktQ4g16SGmfQS1LjDHpJapxBLx1GS0ubSTLTx9LS5nl3U0cYz4zV\nQmjlzNhW+qHZ88xYSdLYDHpJapxBL0mNM+glqXEGvSQ1zqCXpMatGfRJrk+yN8nOA7x2ZZIHkzxy\nNuVJkqY1zhH9VuCi1TOTbAR+Hbiz76IkSf1ZM+ir6mbg3gO89Hrgqt4rkiT1aqIx+iSXAHdX1a6e\n65Ek9WzDeldIcgLwGkbDNvtnH2qd5eXl/dODwYDBYLDeZiWpacPhkOFwOJNtj3WtmySbgBur6twk\nvwjcBPyQUcBvBO4BLqyqbx9gXa91o6m1co2YVvqh2evzWjfjHtGne1BVtwFLK4q5Azi/qg40ji9J\nmrNxvl65DfgEcE6Su5K8ZNUixRpDN5Kk+fEyxVoIrQx5tNIPzZ6XKZYkjc2gl6TGGfSS1DiDXpIa\nZ9BLUuMMeklqnEEvSY0z6CWpcQa9pra0tJkkM31Impxnxmpqh+tszxbOKPXMWI3LM2MlSWMz6CWp\ncQa9JDXOoJekxhn0ktQ4g16SGjfOHaauT7I3yc4V816bZHeSHUn+OckjZlumJGlS4xzRbwUuWjXv\no8ATquo84Hbgmr4LkyT1Y82gr6qbgXtXzbupqh7snt4CbJxBbZKkHvQxRv+HwId62I4kaQY2TLNy\nkj8FflxV2w613PLy8v7pwWDAYDCYplmtw9LSZvbuvXPeZUhaw3A4ZDgczmTbY13rJskm4MaqOnfF\nvD8AXgY8q6p+dIh1vdbNHLV0HZoWrhHjtW40rj6vdTPuEX26x74CLgauAp5xqJCXJM3fOF+v3AZ8\nAjgnyV1JXgK8CTgR+Lck25O8ecZ1SpIm5GWKG+fQzfracOhGRwovUyxJGptBL0mNM+glqXEGvSQ1\nzqCXpMYZ9JLUOINekhpn0EtS4wx6SWqcQS9JjTPoJalxBr0kNc6gl6TGGfSS1DiDXpIaN86NR65P\nsjfJzhXzTk3y0SRfTvKRJCfPtkxJ0qTGOaLfCly0at7VwE1V9XPAx4Br+i5MktSPNYO+qm4G7l01\n+1Lg7d3024Hn91yXJKknk47Rn15VewGqag9wen8lSZL61NeHsd6gUpKOUBsmXG9vkjOqam+SJeDb\nh1p4eXl5//RgMGAwGEzYrDRLx3c375YOv+FwyHA4nMm2M87d4pNsBm6sqid2z68DvltV1yV5NXBq\nVV19kHXLO9LPzyi4Zv3zt40jrQ3fc4svCVXVy5HHmkGfZBswAE4D9gJbgPcD7wUeA9wJ/E5Vfe8g\n6xv0c2TQH51t+J5bfIc16KduwKCfK4P+6GzD99zi6zPoPTNWkhpn0EtS4wx6SWqcQS9JjTPoJalx\nBr0kNc6gl6TGGfSS1DiDXpIaZ9BLUuMMeklqnEEvSY0z6CWpcQa9JDXOoJekxhn0ktS4qYI+yauS\n3JZkZ5J3JXlIX4VJkvoxcdAneTRwGXB+VZ3L6Ebjv9tXYZKkfmyYcv1jgYcneRB4GPDN6UuSJPVp\n4iP6qvom8DrgLuAe4HtVdVNfhUmS+jHN0M0pwKXAJuDRwIlJXthXYZKkfkwzdPNrwNeq6rsASd4H\nPBXYtnrB5eXl/dODwYDBYDBFs5IO7XiSzLyVM87YxJ49X595O0eL4XDIcDicybZTVZOtmFwIXA9c\nAPwI2Ap8pqr+YdVyNWkbmt7oDT/rn79tHH1tjNrxvT07SaiqXv5iTzNG/2ngBuBW4POMfrve0kdR\nkqT+THxEP3YDHtHPlUf0tjHLdnxvz84RcUQvSVoMBr0kNc6gl6TGGfSS1DiDXpIaZ9BLUuMMeklq\nnEEvSY0z6CVNaHRNnVk+lpY2z7uTTfDM2MZ5ZqxtLHY7R+/Zt54ZK0kam0EvSY0z6CWpcQa9JDXO\noJekxhn0ktS4qYI+yclJ3ptkd5IvJHlyX4VJkvoxzc3BAd4IfLCqfjvJBuBhPdQkSerRNDcHfwRw\na1U9bo3lPGFqjjxhyjYWux1PmOpjW9MM3TwW+E6SrUm2J3lLkhP6KEqS1J9phm42AOcDf1RVn03y\nBuBqYMvqBZeXl/dPDwYDBoPBFM22Y2lpM3v33jnvMiQdAYbDIcPhcCbbnmbo5gzgk1V1dvf86cCr\nq+p5q5Zz6OYgHFaxjcVt43C149BNH9uaeOimqvYCdyc5p5v1bOCLfRQlSerPtN+6uRx4V5LjgK8B\nL5m+JElSn7xM8Rw5dGMbi9vG4WrHoZs+tuWZsZLUOINekhpn0EtS4wx6SWqcQS9JjTPoJalxBr0k\nNc6gl6TGGfSS1DiDXpIaZ9BLUuMMeklqnEEvSY0z6CWpcQa9JDXOoJekxk0d9EmOSbI9yb/0UZAk\nqV99HNFfgfeKlaQj1lRBn2Qj8Fzgrf2UI0nq27RH9K8HruLw3KBSkjSBDZOumOQ3gL1VtSPJgNGd\ngg9oeXl5//RgMGAwGEzarCQ1aTgcMhwOZ7LtTHqH9SR/DbwIeAA4ATgJeF9VvXjVcnW03sV9LUmY\n/T9DtmEbi9xOOFrzIwlVddAD6HVtq48fYpJnAldW1SUHeM2gPwiD3jYWt43D1Y5B38e2/B69JDWu\nlyP6QzbgEf1BeURvG4vbxuFqxyP6PrblEb0kNc6gl6TGGfSS1DiDXpIaZ9BLUuMMeklqnEEvSY0z\n6CWpcQa9JDXOoJekxhn0ktQ4g16SGmfQS1LjDHpJapxBL0mNM+glqXETB32SjUk+luQLSXYlubzP\nwiRJ/Zjm5uBLwFJV7UhyIvA54NKq+tKq5bzD1EF4hynbWNw2Dlc73mGqj21NfERfVXuqakc3/QNg\nN3BmH0VJkvqzoY+NJNkMnAd8qo/tzdsNN9zAbbfdNtM2TjjhhJluX5L2mTrou2GbG4AruiP7n7K8\nvLx/ejAYMBgMpm12pl760ldy330vAk6cWRvHH/+mmW1basfx3RDn7Jxxxib27Pn6TNsYx3A4ZDgc\nzmTbE4/RAyTZAPwr8KGqeuNBllm4MfqTT17ivvt2AEszbONX+f73b6GN8VrbOPraOFztHL2fAxwR\nY/SdtwFfPFjIS5Lmb5qvVz4N+D3gWUluTbI9ycX9lSZJ6sPEY/RV9R/AsT3WIkmaAc+MlaTGGfSS\n1DiDXpIaZ9BLUuMMeklqnEEvSY0z6CWpcQa9JDXOoJekxhn0ktQ4g16SGmfQS1LjDHpJapxBL0mN\nM+glqXFTBX2Si5N8KclXkry6r6IkSf2Z5g5TxwB/D1wEPAF4QZLH91XY4hjOu4AZG867gBkazruA\nGRvOu4AZG867gIUxzRH9hcDtVXVnVf0YeDdwaT9lLZLhvAuYseG8C5ih4bwLmLHhvAuYseG8C1gY\n0wT9mcDdK55/o5snSTqCTHzP2JYdd9xxnHTS75M8dM1l77//yzz0oZ9bdxv33/+lSUqTpHVLVU22\nYvIUYLmqLu6eXw1UVV23arnJGpCko1xVpY/tTBP0xwJfBp4NfAv4NPCCqtrdR2GSpH5MPHRTVT9J\n8krgo4zG+q835CXpyDPxEb0kaTGs+1s3STYm+ViSLyTZleSybv5fJvl8kluTfDjJ0op1rklye5Ld\nSZ6zYv75SXZ2J1y9oZ8uTWe9/UuyKckPk2zvHm9esa1F6N/lq16/MsmDSR65Yt5C7L/19q2Bfbfv\nd3NLkm+s6MfFK9ZZiH0H6+9fA/vv8hWvXdbto11Jrl0xv5/9V1XregBLwHnd9ImMxukfD5y4YpnL\ngH/spn8BuJXRMNFm4Kv8338SnwIu6KY/CFy03nr6fkzQv03AzoNsa2H61z3fCHwYuAN4ZDfv5xdl\n/03Qtyb2HbAF+OMDLL8w+27C/rWy/waMhsA3dK89qu/9t+4j+qraU1U7uukfALuBM7vpfR4OPNhN\nXwK8u6oeqKqvA7cDF3ZHxCdV1We65d4BPH+99fRtgv4B/NQn44vWv+7l1wNXrVrlUhZk/03QN2hn\n3x3o2xkLs+9gov4dcP4C9u8VwLVV9UD32ne6VXrbf9Ne62YzcB6jvy4k+askdwEvBP68W2z1iVX3\ndPPOZHSS1T5H3AlXY/YPYHP3r+PHkzy9m7dQ/UtyCXB3Ve1atdhC7r8x+wYN7Ltu1iuT7Ejy1iQn\nd/MWct/Bmv07ZcWiLey/c4BnJLml68eTusV623/TXOvmROAG4Ip9R7tV9WdVdRbwLkbDGwtrHf37\nFnBWVZ0PXAls69Y9oq3sH/AT4DWM/kVeeGP0bd9R4DdZ8H3X/W6+GTi7qs4D9gCvm2d901pH/xb+\nvdf1bwNwalU9BfgT4L19tzlR0CfZwKjQd1bVBw6wyDbgN7vpe4DHrHhtYzfvYPPnbsz+/RZAVf1P\nVd3bTW8H/pPRX+hF6t/jGI0Bfj7JHYxq3Z7kdEY1n7Vi9SN6/43Zt88lOb2qftzAvqOq/qu6wVrg\nnxhdhwoaee8doH8XdPNbeO/B6Kj9fQDdcMxPkpxGn++9CT9UeAfwt6vm/eyK6cuA93TT+z6MfQjw\nWP7/Bwq3MPqlDKMPFC6e9gOPPh7r7N+jgGO66bO7nXbKovVv1et3MDrCWLj9t86+NbHvgKUV068C\nti3ivpugf63sv5cDf9FNnwPc2ff+m6TQpzH6d3hHV8R24GJGf6V2dfM/APzMinWu6YrcDTxnxfwn\ndevcDrxx3jthkv4x+s/ltm65zwLPXcT+rVrma3TfTFmk/bfevrWy77rw2NnNfz9wxqLtu0n619D+\nOw54Z1fvZ4Fn9r3/PGFKkhrnrQQlqXEGvSQ1zqCXpMYZ9JLUOINekhpn0EtS4wx6SWqcQS9Jjftf\nsvZm4lFHicMAAAAASUVORK5CYII=\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x104b03c8>"
+       "<matplotlib.figure.Figure at 0xe71fb38>"
       ]
      },
      "metadata": {},
@@ -431,9 +439,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
-    "collapsed": true
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [],
    "source": []
