--- a/Initial_Modeling.ipynb
+++ b/Initial_Modeling.ipynb
@@ -14,15 +14,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import sklearn\n",
-    "import seaborn as sns\n",
-    "from bokeh.io import show\n",
-    "from bokeh.models import (\n",
-    "    ColumnDataSource,\n",
-    "    HoverTool,\n",
-    "    LogColorMapper\n",
-    ")\n",
-    "from bokeh.palettes import Viridis6 as palette\n",
-    "from bokeh.plotting import figure"
+    "import seaborn as sns\n"
    ]
   },
   {
@@ -439,13 +431,121 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "Unknown label type: 'continuous'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-30-5193f4b77f45>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[1;31m# fitting the model\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 8\u001b[1;33m \u001b[0mknn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mTrain_Features_All\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mTrain_Target_All\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      9\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[1;31m# predict the response\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mC:\\Users\\ADMIN\\Anaconda2\\lib\\site-packages\\sklearn\\neighbors\\base.pyc\u001b[0m in \u001b[0;36mfit\u001b[1;34m(self, X, y)\u001b[0m\n\u001b[0;32m    777\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0moutputs_2d_\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mTrue\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    778\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 779\u001b[1;33m         \u001b[0mcheck_classification_targets\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    780\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mclasses_\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    781\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_y\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mempty\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mint\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mC:\\Users\\ADMIN\\Anaconda2\\lib\\site-packages\\sklearn\\utils\\multiclass.pyc\u001b[0m in \u001b[0;36mcheck_classification_targets\u001b[1;34m(y)\u001b[0m\n\u001b[0;32m    170\u001b[0m     if y_type not in ['binary', 'multiclass', 'multiclass-multioutput',\n\u001b[0;32m    171\u001b[0m                       'multilabel-indicator', 'multilabel-sequences']:\n\u001b[1;32m--> 172\u001b[1;33m         \u001b[1;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Unknown label type: %r\"\u001b[0m \u001b[1;33m%\u001b[0m \u001b[0my_type\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    173\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    174\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: Unknown label type: 'continuous'"
+     ]
+    }
+   ],
+   "source": [
+    "# loading library\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "\n",
+    "# instantiate learning model (k = 3)\n",
+    "knn = KNeighborsClassifier(n_neighbors=3)\n",
+    "\n",
+    "# fitting the model\n",
+    "knn.fit(Train_Features_All, Train_Target_All)\n",
+    "\n",
+    "# predict the response\n",
+    "pred = knn.predict(Test_Features_All)\n",
+    "\n",
+    "# evaluate accuracy\n",
+    "print accuracy_score(Test_Target_All, pred)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# L1 Reguralization "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "37.377242124867372"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "reg = linear_model.Lasso(alpha = 0.1)\n",
+    "reg.fit (Train_Features_All,Train_Target_All)\n",
+    "\n",
+    "Lasso_Prediction = reg.predict(Test_Features_All)\n",
+    "\n",
+    "#reg.score(Lasso_Prediction,Test_Target_All)\n",
+    "\n",
+    "\n",
+    "Lasso_RMSE = np.sqrt(mean_squared_error(Test_Target_All, Lasso_Prediction))\n",
+    "#[reg.coef_,Train_Features_All.columns.values.tolist()]\n",
+    "Lasso_RMSE\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# L2 Reguralization "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "37.372184553705161"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "reg = linear_model.()\n",
+    "reg.fit (Train_Features_All,Train_Target_All)\n",
+    "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=1, normalize=False)\n",
+    "Lasso_Prediction = reg.predict(Test_Features_All)\n",
+    "#reg.score(Lasso_Prediction,Test_Target_All)\n",
+    "\n",
+    "\n",
+    "Ridge_RMSE = np.sqrt(mean_squared_error(Test_Target_All, Lasso_Prediction))\n",
+    "#[reg.coef_,Train_Features_All.columns.values.tolist()]\n",
+    "Ridge_RMSE\n"
+   ]
   }
  ],
  "metadata": {
