--- a/Initial_Modeling.ipynb
+++ b/Initial_Modeling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 85,
    "metadata": {
     "collapsed": true
    },
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 86,
    "metadata": {
     "collapsed": false
    },
@@ -92,7 +92,7 @@
        "0              0.08           0.07733        0.0  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 87,
    "metadata": {
     "collapsed": false
    },
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 88,
    "metadata": {
     "collapsed": false
    },
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 89,
    "metadata": {
     "collapsed": true
    },
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 90,
    "metadata": {
     "collapsed": false
    },
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 91,
    "metadata": {
     "collapsed": false
    },
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 92,
    "metadata": {
     "collapsed": true
    },
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 93,
    "metadata": {
     "collapsed": false
    },
@@ -234,7 +234,7 @@
        "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=1, normalize=False)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 94,
    "metadata": {
     "collapsed": true
    },
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 95,
    "metadata": {
     "collapsed": false
    },
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 96,
    "metadata": {
     "collapsed": false
    },
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 97,
    "metadata": {
     "collapsed": false
    },
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 98,
    "metadata": {
     "collapsed": false
    },
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 99,
    "metadata": {
     "collapsed": false
    },
@@ -401,7 +401,7 @@
      "data": {
       "image/png": "iVBORw0KGgoAAAANSUhEUgAAAXoAAAEACAYAAAC9Gb03AAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAERRJREFUeJzt3X+sZGV9x/H3BxYRBQExcCsru2JDba2UYkGrRifaCrER\nTJs21VpTazQxFYglVLBN97ZpGrCxam1tYsWNGjdGqdHS+KtEpwlV/LWsu+iqWBEQ3bVWlBiDFfn2\njzm7vb3u7p07c2Zn59n3K5nkzJlzzvN97rnzuec+M+ecVBWSpHYdM+8CJEmzZdBLUuMMeklqnEEv\nSY0z6CWpcQa9JDVuzaBPcn2SvUl2rpj3S0k+meTWJJ9O8iuzLVOSNKlxjui3AhetmvdaYEtV/TKw\nBfibvguTJPVjzaCvqpuBe1fNfhA4uZs+Bbin57okST3ZMOF6rwI+kuR1QICn9leSJKlPk34Y+wrg\niqo6i1Hov62/kiRJfco417pJsgm4sarO7Z5/r6pOWfH696vq5IOs68V0JGkCVZU+tjPuEX26xz73\nJHkmQJJnA1851MpV1exjy5Ytc6/haOhf95vU82PLqudt/a4eKfvO/k326NOaY/RJtgED4LQkd3Xv\njpcBf5fkWOB+4OW9ViVJ6s2aQV9VLzzIS353XpIWgGfGTmkwGMy7hJlqu3+DeRcwU23vu/b716ex\nPoydqoGkZt2G2peEfePoM2yl97FRaVJJqMP8YawkaUEZ9JLUOINekhpn0EtS4wx6SWqcQS9JjTPo\nJalxBr0kNc6gl6TGGfSS1DiDXpIaZ9BLUuMMeklqnEEvSY1bM+iTXJ9kb5Kdq+ZflmR3kl1Jrp1d\niZKkaax5hylgK/Am4B37ZiQZAM8DnlhVDyR51GzKkyRNa80j+qq6Gbh31exXANdW1QPdMt+ZQW2S\npB5MOkZ/DvCMJLck+XgS7x8rSUeocYZuDrbeqVX1lCQXAO8Bzj7YwsvLy/unB4OB93qUpFWGwyHD\n4XAm2x7rnrFJNgE3VtW53fMPAtdV1b93z78KPLmq/vsA63rPWE3Ne8bqaDOPe8ame+zzfuBZXTHn\nAMcdKOQlSfO35tBNkm3AADgtyV3AFuBtwNYku4AfAS+eZZGSpMmNNXQzVQMO3agHDt3oaDOPoRtJ\n0oIy6CWpcQa9JDXOoJekxhn0ktQ4g16SGmfQS1LjDHpJapxBLx1GS0ubSTLTx9LS5nl3U0cYz4zV\nQmjlzNhW+qHZ88xYSdLYDHpJapxBL0mNM+glqXEGvSQ1zqCXpMatGfRJrk+yN8nOA7x2ZZIHkzxy\nNuVJkqY1zhH9VuCi1TOTbAR+Hbiz76IkSf1ZM+ir6mbg3gO89Hrgqt4rkiT1aqIx+iSXAHdX1a6e\n65Ek9WzDeldIcgLwGkbDNvtnH2qd5eXl/dODwYDBYLDeZiWpacPhkOFwOJNtj3WtmySbgBur6twk\nvwjcBPyQUcBvBO4BLqyqbx9gXa91o6m1co2YVvqh2evzWjfjHtGne1BVtwFLK4q5Azi/qg40ji9J\nmrNxvl65DfgEcE6Su5K8ZNUixRpDN5Kk+fEyxVoIrQx5tNIPzZ6XKZYkjc2gl6TGGfSS1DiDXpIa\nZ9BLUuMMeklqnEEvSY0z6CWpcQa9pra0tJkkM31Impxnxmpqh+tszxbOKPXMWI3LM2MlSWMz6CWp\ncQa9JDXOoJekxhn0ktQ4g16SGjfOHaauT7I3yc4V816bZHeSHUn+OckjZlumJGlS4xzRbwUuWjXv\no8ATquo84Hbgmr4LkyT1Y82gr6qbgXtXzbupqh7snt4CbJxBbZKkHvQxRv+HwId62I4kaQY2TLNy\nkj8FflxV2w613PLy8v7pwWDAYDCYplmtw9LSZvbuvXPeZUhaw3A4ZDgczmTbY13rJskm4MaqOnfF\nvD8AXgY8q6p+dIh1vdbNHLV0HZoWrhHjtW40rj6vdTPuEX26x74CLgauAp5xqJCXJM3fOF+v3AZ8\nAjgnyV1JXgK8CTgR+Lck25O8ecZ1SpIm5GWKG+fQzfracOhGRwovUyxJGptBL0mNM+glqXEGvSQ1\nzqCXpMYZ9JLUOINekhpn0EtS4wx6SWqcQS9JjTPoJalxBr0kNc6gl6TGGfSS1DiDXpIaN86NR65P\nsjfJzhXzTk3y0SRfTvKRJCfPtkxJ0qTGOaLfCly0at7VwE1V9XPAx4Br+i5MktSPNYO+qm4G7l01\n+1Lg7d3024Hn91yXJKknk47Rn15VewGqag9wen8lSZL61NeHsd6gUpKOUBsmXG9vkjOqam+SJeDb\nh1p4eXl5//RgMGAwGEzYrDRLx3c375YOv+FwyHA4nMm2M87d4pNsBm6sqid2z68DvltV1yV5NXBq\nVV19kHXLO9LPzyi4Zv3zt40jrQ3fc4svCVXVy5HHmkGfZBswAE4D9gJbgPcD7wUeA9wJ/E5Vfe8g\n6xv0c2TQH51t+J5bfIc16KduwKCfK4P+6GzD99zi6zPoPTNWkhpn0EtS4wx6SWqcQS9JjTPoJalx\nBr0kNc6gl6TGGfSS1DiDXpIaZ9BLUuMMeklqnEEvSY0z6CWpcQa9JDXOoJekxhn0ktS4qYI+yauS\n3JZkZ5J3JXlIX4VJkvoxcdAneTRwGXB+VZ3L6Ebjv9tXYZKkfmyYcv1jgYcneRB4GPDN6UuSJPVp\n4iP6qvom8DrgLuAe4HtVdVNfhUmS+jHN0M0pwKXAJuDRwIlJXthXYZKkfkwzdPNrwNeq6rsASd4H\nPBXYtnrB5eXl/dODwYDBYDBFs5IO7XiSzLyVM87YxJ49X595O0eL4XDIcDicybZTVZOtmFwIXA9c\nAPwI2Ap8pqr+YdVyNWkbmt7oDT/rn79tHH1tjNrxvT07SaiqXv5iTzNG/2ngBuBW4POMfrve0kdR\nkqT+THxEP3YDHtHPlUf0tjHLdnxvz84RcUQvSVoMBr0kNc6gl6TGGfSS1DiDXpIaZ9BLUuMMeklq\nnEEvSY0z6CVNaHRNnVk+lpY2z7uTTfDM2MZ5ZqxtLHY7R+/Zt54ZK0kam0EvSY0z6CWpcQa9JDXO\noJekxhn0ktS4qYI+yclJ3ptkd5IvJHlyX4VJkvoxzc3BAd4IfLCqfjvJBuBhPdQkSerRNDcHfwRw\na1U9bo3lPGFqjjxhyjYWux1PmOpjW9MM3TwW+E6SrUm2J3lLkhP6KEqS1J9phm42AOcDf1RVn03y\nBuBqYMvqBZeXl/dPDwYDBoPBFM22Y2lpM3v33jnvMiQdAYbDIcPhcCbbnmbo5gzgk1V1dvf86cCr\nq+p5q5Zz6OYgHFaxjcVt43C149BNH9uaeOimqvYCdyc5p5v1bOCLfRQlSerPtN+6uRx4V5LjgK8B\nL5m+JElSn7xM8Rw5dGMbi9vG4WrHoZs+tuWZsZLUOINekhpn0EtS4wx6SWqcQS9JjTPoJalxBr0k\nNc6gl6TGGfSS1DiDXpIaZ9BLUuMMeklqnEEvSY0z6CWpcQa9JDXOoJekxk0d9EmOSbI9yb/0UZAk\nqV99HNFfgfeKlaQj1lRBn2Qj8Fzgrf2UI0nq27RH9K8HruLw3KBSkjSBDZOumOQ3gL1VtSPJgNGd\ngg9oeXl5//RgMGAwGEzarCQ1aTgcMhwOZ7LtTHqH9SR/DbwIeAA4ATgJeF9VvXjVcnW03sV9LUmY\n/T9DtmEbi9xOOFrzIwlVddAD6HVtq48fYpJnAldW1SUHeM2gPwiD3jYWt43D1Y5B38e2/B69JDWu\nlyP6QzbgEf1BeURvG4vbxuFqxyP6PrblEb0kNc6gl6TGGfSS1DiDXpIaZ9BLUuMMeklqnEEvSY0z\n6CWpcQa9JDXOoJekxhn0ktQ4g16SGmfQS1LjDHpJapxBL0mNM+glqXETB32SjUk+luQLSXYlubzP\nwiRJ/Zjm5uBLwFJV7UhyIvA54NKq+tKq5bzD1EF4hynbWNw2Dlc73mGqj21NfERfVXuqakc3/QNg\nN3BmH0VJkvqzoY+NJNkMnAd8qo/tzdsNN9zAbbfdNtM2TjjhhJluX5L2mTrou2GbG4AruiP7n7K8\nvLx/ejAYMBgMpm12pl760ldy330vAk6cWRvHH/+mmW1basfx3RDn7Jxxxib27Pn6TNsYx3A4ZDgc\nzmTbE4/RAyTZAPwr8KGqeuNBllm4MfqTT17ivvt2AEszbONX+f73b6GN8VrbOPraOFztHL2fAxwR\nY/SdtwFfPFjIS5Lmb5qvVz4N+D3gWUluTbI9ycX9lSZJ6sPEY/RV9R/AsT3WIkmaAc+MlaTGGfSS\n1DiDXpIaZ9BLUuMMeklqnEEvSY0z6CWpcQa9JDXOoJekxhn0ktQ4g16SGmfQS1LjDHpJapxBL0mN\nM+glqXFTBX2Si5N8KclXkry6r6IkSf2Z5g5TxwB/D1wEPAF4QZLH91XY4hjOu4AZG867gBkazruA\nGRvOu4AZG867gIUxzRH9hcDtVXVnVf0YeDdwaT9lLZLhvAuYseG8C5ih4bwLmLHhvAuYseG8C1gY\n0wT9mcDdK55/o5snSTqCTHzP2JYdd9xxnHTS75M8dM1l77//yzz0oZ9bdxv33/+lSUqTpHVLVU22\nYvIUYLmqLu6eXw1UVV23arnJGpCko1xVpY/tTBP0xwJfBp4NfAv4NPCCqtrdR2GSpH5MPHRTVT9J\n8krgo4zG+q835CXpyDPxEb0kaTGs+1s3STYm+ViSLyTZleSybv5fJvl8kluTfDjJ0op1rklye5Ld\nSZ6zYv75SXZ2J1y9oZ8uTWe9/UuyKckPk2zvHm9esa1F6N/lq16/MsmDSR65Yt5C7L/19q2Bfbfv\nd3NLkm+s6MfFK9ZZiH0H6+9fA/vv8hWvXdbto11Jrl0xv5/9V1XregBLwHnd9ImMxukfD5y4YpnL\ngH/spn8BuJXRMNFm4Kv8338SnwIu6KY/CFy03nr6fkzQv03AzoNsa2H61z3fCHwYuAN4ZDfv5xdl\n/03Qtyb2HbAF+OMDLL8w+27C/rWy/waMhsA3dK89qu/9t+4j+qraU1U7uukfALuBM7vpfR4OPNhN\nXwK8u6oeqKqvA7cDF3ZHxCdV1We65d4BPH+99fRtgv4B/NQn44vWv+7l1wNXrVrlUhZk/03QN2hn\n3x3o2xkLs+9gov4dcP4C9u8VwLVV9UD32ne6VXrbf9Ne62YzcB6jvy4k+askdwEvBP68W2z1iVX3\ndPPOZHSS1T5H3AlXY/YPYHP3r+PHkzy9m7dQ/UtyCXB3Ve1atdhC7r8x+wYN7Ltu1iuT7Ejy1iQn\nd/MWct/Bmv07ZcWiLey/c4BnJLml68eTusV623/TXOvmROAG4Ip9R7tV9WdVdRbwLkbDGwtrHf37\nFnBWVZ0PXAls69Y9oq3sH/AT4DWM/kVeeGP0bd9R4DdZ8H3X/W6+GTi7qs4D9gCvm2d901pH/xb+\nvdf1bwNwalU9BfgT4L19tzlR0CfZwKjQd1bVBw6wyDbgN7vpe4DHrHhtYzfvYPPnbsz+/RZAVf1P\nVd3bTW8H/pPRX+hF6t/jGI0Bfj7JHYxq3Z7kdEY1n7Vi9SN6/43Zt88lOb2qftzAvqOq/qu6wVrg\nnxhdhwoaee8doH8XdPNbeO/B6Kj9fQDdcMxPkpxGn++9CT9UeAfwt6vm/eyK6cuA93TT+z6MfQjw\nWP7/Bwq3MPqlDKMPFC6e9gOPPh7r7N+jgGO66bO7nXbKovVv1et3MDrCWLj9t86+NbHvgKUV068C\nti3ivpugf63sv5cDf9FNnwPc2ff+m6TQpzH6d3hHV8R24GJGf6V2dfM/APzMinWu6YrcDTxnxfwn\ndevcDrxx3jthkv4x+s/ltm65zwLPXcT+rVrma3TfTFmk/bfevrWy77rw2NnNfz9wxqLtu0n619D+\nOw54Z1fvZ4Fn9r3/PGFKkhrnrQQlqXEGvSQ1zqCXpMYZ9JLUOINekhpn0EtS4wx6SWqcQS9Jjftf\nsvZm4lFHicMAAAAASUVORK5CYII=\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0xe71fb38>"
+       "<matplotlib.figure.Figure at 0x1547d4e0>"
       ]
      },
      "metadata": {},
@@ -431,23 +431,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "Unknown label type: 'continuous'",
+     "ename": "NameError",
+     "evalue": "name 'Train_Features_All' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-30-5193f4b77f45>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[1;31m# fitting the model\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 8\u001b[1;33m \u001b[0mknn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mTrain_Features_All\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mTrain_Target_All\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      9\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[1;31m# predict the response\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mC:\\Users\\ADMIN\\Anaconda2\\lib\\site-packages\\sklearn\\neighbors\\base.pyc\u001b[0m in \u001b[0;36mfit\u001b[1;34m(self, X, y)\u001b[0m\n\u001b[0;32m    777\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0moutputs_2d_\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mTrue\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    778\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 779\u001b[1;33m         \u001b[0mcheck_classification_targets\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    780\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mclasses_\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    781\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_y\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mempty\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mint\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mC:\\Users\\ADMIN\\Anaconda2\\lib\\site-packages\\sklearn\\utils\\multiclass.pyc\u001b[0m in \u001b[0;36mcheck_classification_targets\u001b[1;34m(y)\u001b[0m\n\u001b[0;32m    170\u001b[0m     if y_type not in ['binary', 'multiclass', 'multiclass-multioutput',\n\u001b[0;32m    171\u001b[0m                       'multilabel-indicator', 'multilabel-sequences']:\n\u001b[1;32m--> 172\u001b[1;33m         \u001b[1;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Unknown label type: %r\"\u001b[0m \u001b[1;33m%\u001b[0m \u001b[0my_type\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    173\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    174\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mValueError\u001b[0m: Unknown label type: 'continuous'"
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-5193f4b77f45>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[1;31m# fitting the model\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 8\u001b[1;33m \u001b[0mknn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mTrain_Features_All\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mTrain_Target_All\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      9\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[1;31m# predict the response\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'Train_Features_All' is not defined"
      ]
     }
    ],
@@ -477,20 +475,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "37.377242124867372"
-      ]
-     },
-     "execution_count": 62,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'linear_model' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-2-965faec56544>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mreg\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlinear_model\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mLasso\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0malpha\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m0.1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0mreg\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mTrain_Features_All\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mTrain_Target_All\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mLasso_Prediction\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mreg\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mTest_Features_All\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'linear_model' is not defined"
+     ]
     }
    ],
    "source": [
@@ -505,7 +504,7 @@
     "\n",
     "Lasso_RMSE = np.sqrt(mean_squared_error(Test_Target_All, Lasso_Prediction))\n",
     "#[reg.coef_,Train_Features_All.columns.values.tolist()]\n",
-    "Lasso_RMSE\n"
+    "print('Lasso_RMSE',Lasso_RMSE)\n"
    ]
   },
   {
@@ -517,25 +516,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "37.372184553705161"
-      ]
-     },
-     "execution_count": 57,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
-    "reg = linear_model.()\n",
+    "reg = linear_model.Ridge(alpha=.5)\n",
     "reg.fit (Train_Features_All,Train_Target_All)\n",
     "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=1, normalize=False)\n",
     "Lasso_Prediction = reg.predict(Test_Features_All)\n",
@@ -544,7 +532,8 @@
     "\n",
     "Ridge_RMSE = np.sqrt(mean_squared_error(Test_Target_All, Lasso_Prediction))\n",
     "#[reg.coef_,Train_Features_All.columns.values.tolist()]\n",
-    "Ridge_RMSE\n"
+    "\n",
+    "print('Ridge_RMSE ',Ridge_RMSE)\n"
    ]
   }
  ],
