--- a/Data_Wrangling.ipynb
+++ b/Data_Wrangling.ipynb
@@ -1308,6 +1308,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "****\n",
+    "**10. Staff Education **\n",
+    "\n",
+    "This data will be joined at the school level. This is a measure of how much food assistance is being used by the various schools\n",
+    "\n",
+    "****\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "****\n",
+    "**11. Area Crime **\n",
+    "\n",
+    "This data will be joined at the school level. This is a measure of how much food assistance is being used by the various schools\n",
+    "\n",
+    "****"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 89,
    "metadata": {
